# raycasting_C

./: .gitignore  CMakeLists.txt  README.md  globals.h  main.c
map/: map.c  map.h
player/: player.c  player.h
rays/: rays.c  rays.h
rendering/map/: render.c  render.h
utils/: utils.c  utils.h
